--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 
         <ul class="navbar">
             <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="#about">About Us</a></li>
+            <li><a href="{% url 'about' %}">About Us</a></li>
             <li><a href="{% url 'product_view' %}">Products</a></li>
             <li><a href="#branches">Branches</a></li>
         </ul>
