--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
 
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Us</a></li>
+            <li><a href="{% url 'about' %}">About Us</a></li>
             <li><a href="{% url 'product_view' %}">Products</a></li>
             <li><a href="#branches">Branches</a></li>
         </ul>
