--- a/templates/panel/product/product_create.html
+++ b/templates/panel/product/product_create.html
@@ -18,7 +18,7 @@
     {{ form.as_p }}
     <div class="update-buttons">
       <button type="submit" class="update-btn update-btn-submit">Create</button>
-      <a class="update-btn update-btn-cancel" href="{% url 'iproduct_view_admin' %}">Cancel</a>
+      <a class="update-btn update-btn-cancel" href="{% url 'product_view_admin' %}">Cancel</a>
     </div>
   </form>
 </div>
