--- a/templates/register_base.html
+++ b/templates/register_base.html
@@ -26,7 +26,7 @@
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'about' %}">About Us</a></li>
             <li><a href="{% url 'product_view' %}">Products</a></li>
-            <li><a href="#branches">Branches</a></li>
+            <li><a href="{% url 'hafez' %}">About Me</a></li>
         </ul>
 
         <!-- icons -->
