--- a/static/css/stylesHafez.css
+++ b/static/css/stylesHafez.css
@@ -40,7 +40,7 @@
     height: 100%;
     position: absolute;
     left: 50%;
-    bottom: 0;
+    bottom: 33px;
     transform: translateX(-50%);
     transition: bottom 1s, left 1s;
 }
