--- a/templates/panel/city/city_view.html
+++ b/templates/panel/city/city_view.html
@@ -13,6 +13,9 @@
 <br><br><br><br>
 <p style="text-align:center" class="title">Cities - Admin Panel</p>
 <br><br>
+<div align="left" style="margin-left:30px;"><a href="{% url 'city_create' %}"><button class="button-new">+ New</button></a></div>
+
+
 <div class="box-container">
     {% for city in city_list %}
     <div class="list-item">
