--- a/templates/panel/inventory/inventory_view.html
+++ b/templates/panel/inventory/inventory_view.html
@@ -13,6 +13,9 @@
 <br><br><br>
 <p style="text-align:center" class="title">Inventories - Admin Panel</p>
 <br><br>
+
+<div align="left" style="margin-left:30px;"><a href="{% url 'inventory_create' %}"><button class="button-new">+ New</button></a></div>
+
 <div class="box-container">
     {% for inventory in inventory_list %}
     <div class="list-item">
