--- a/templates/panel/supplier/supplier_view.html
+++ b/templates/panel/supplier/supplier_view.html
@@ -14,6 +14,9 @@
 <p style="text-align:center" class="title">Suppliers - Admin Panel</p>
 <br>
 
+<div align="left" style="margin-left:30px;"><a href="{% url 'supplier_create' %}"><button class="button-new">+ New</button></a></div>
+
+
 <div class="box-container">
     {% for supplier in supplier_list %}
     <div class="list-item">
