add order to admin panel

--- a/templates/hafez.html
+++ b/templates/hafez.html
@@ -15,8 +15,8 @@
         <div class="hero">
             <div class="page">
                 <h1>I'm Hafezaghili</h1>
-                <p>I'm <span id="element" style="color:blue"></span></p>
-                <br>
+                <p><b>I'm <span id="element" style="color:blue"></span></b></p>
+                <br><br>
                 <button onclick="goBack()" class="btn btn-primary">Back to Previous Page</button>
             </div>
 
@@ -46,7 +46,7 @@
                 window.history.back();
             }
         </script>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><hr>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </body>
     
     {% endblock content %}
