--- a/templates/panel/panel.html
+++ b/templates/panel/panel.html
@@ -23,7 +23,7 @@
             View and edit orders
           </p>
         </div>
-        <a href="#">More</a>
+        <a href="{% url 'order_view' %}">More</a>
       </div>
       <div class="box time">
         <div class="text">
