--- a/static/css/stylesListView3.css
+++ b/static/css/stylesListView3.css
@@ -113,3 +113,11 @@
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
   }
+
+
+  .access{
+    border: 1px solid #000;
+    background-color: #dfe2e1;
+    padding: 10px;
+    border-radius: 10px;
+}
